--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "react": "15.0.2",
     "react-dom": "15.0.2",
     "react-router": "2.4.0",
-    "webpack": "1.13.0"
   },
   "devDependencies": {
     "colors": "1.1.2",
@@ -62,6 +61,7 @@
     "rimraf": "2.5.2",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
+    "webpack": "1.13.0",
     "webpack-dev-middleware": "1.6.1",
     "webpack-hot-middleware": "2.10.0"
   },
