--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "open": "0.0.5",
     "react": "15.0.2",
     "react-dom": "15.0.2",
-    "react-router": "2.4.0",
+    "react-router": "2.4.0"
   },
   "devDependencies": {
     "colors": "1.1.2",
