configure environment for dev

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "hiddenwisdom-react-js",
-  "description": "hidden wisdom front end proj.",
+  "name": "interactive-media-player",
+  "description": "An interactive media player",
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/lagos-devs/hiddenwisdom-react-js.git"
+    "url": "git+https://github.com/iamadi.git"
   },
   "scripts": {
     "start": "npm-run-all --parallel open:src lint:watch",
@@ -30,9 +30,11 @@
     "bootstrap": "4.0.0-alpha.3",
     "compression": "^1.6.2",
     "express": "^4.14.0",
+    "finalhandler": "0.5.1",
     "font-awesome": "4.6.3",
     "history": "^1.12.5",
     "isomorphic-fetch": "^2.2.1",
+    "json5": "0.5.1",
     "keymirror": "0.1.1",
     "react": "~15.2.1",
     "react-dom": "~15.2.1",
@@ -64,11 +66,11 @@
     "babel-preset-react-hmre": "1.1.1",
     "babel-preset-stage-2": "^6.11.0",
     "babel-register": "6.8.0",
+    "colors": "^1.1.2",
     "compression": "1.6.1",
+    "coveralls": "^2.11.12",
     "cross-env": "1.0.7",
     "css-loader": "0.23.1",
-    "colors": "^1.1.2",
-    "coveralls": "^2.11.12",
     "enzyme": "^2.3.0",
     "eslint": "^2.9.0",
     "eslint-plugin-import": "^1.6.1",
@@ -81,8 +83,8 @@
     "istanbul": "^1.0.0-alpha.2",
     "jsdom": "^9.2.1",
     "mocha": "^2.4.5",
-    "node-sass": "3.8.0",
     "nock": "^8.0.0",
+    "node-sass": "3.8.0",
     "npm-run-all": "^1.8.0",
     "open": "0.0.5",
     "react-addons-test-utils": "15.0.2",
